# platform.upstream.gmock

./: CMakeLists.txt  gmock-1.7.0.tar.gz.delta  gmock-1.7.0.tar.gz.id  gmock.pc.in  gmock_main.pc.in  project.config
packaging/: gmock.spec
pc/: CMakeLists.txt  gmock.pc.in  gmock_main.pc.in
